# repo_setup

./: .gitignore  README.md  codecontests_parsed_results.json  large_repos_parsed_results.json  pyproject.toml  setup_large_repos.py  setup_repos.py
large_repos/incremental_backup_system/unified/: LIBRARYBENCH_metrics.json  PLAN.md  README.md  pyproject.toml  report.json  setup.py  test_output_original.txt
large_repos/incremental_backup_system/unified/common/: __init__.py
large_repos/incremental_backup_system/unified/common/core/: __init__.py  assets.py  backup_engine.py  chunking.py  compression.py  config.py  exceptions.py  file_utils.py  hashing.py  models.py  storage.py  visual.py  workspace.py
large_repos/incremental_backup_system/unified/creative_vault/: __init__.py  __main__.py  interfaces.py  utils.py
large_repos/incremental_backup_system/unified/creative_vault/asset_tracker/: reference_tracker.py
large_repos/incremental_backup_system/unified/creative_vault/backup_engine/: incremental_backup.py
large_repos/incremental_backup_system/unified/creative_vault/element_extraction/: extractor.py
large_repos/incremental_backup_system/unified/creative_vault/timeline/: timeline_manager.py
large_repos/incremental_backup_system/unified/creative_vault/visual_diff/: diff_generator.py
large_repos/incremental_backup_system/unified/creative_vault/workspace_capture/: environment_capture.py
large_repos/incremental_backup_system/unified/gamevault/: __init__.py  config.py  models.py  utils.py
large_repos/incremental_backup_system/unified/gamevault/asset_optimization/: manager.py
large_repos/incremental_backup_system/unified/gamevault/backup_engine/: __init__.py  chunker.py  engine.py  storage.py  version_tracker.py
large_repos/incremental_backup_system/unified/unified_incremental_backup_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
large_repos/query_language_interpreter/unified/: LIBRARYBENCH_metrics.json  PLAN.md  README.md  pyproject.toml  report.json  setup.py
large_repos/query_language_interpreter/unified/common/: __init__.py
large_repos/query_language_interpreter/unified/common/core/: __init__.py  audit_system.py  content_processor.py  models.py  policy_engine.py  query_framework.py
large_repos/query_language_interpreter/unified/common/utils/: __init__.py  (+4 more)
large_repos/query_language_interpreter/unified/unified_query_language_interpreter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+685 files in other folders)
