[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minicode"
version = "0.1.0"
description = "Setup the minicode refactoring benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "tomli>=2.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["minicode*"]
