[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-query_language_interpreter"
version = "0.1.0"
description = "Unified libraries for query_language_interpreter with original package names preserved"
requires-python = ">=3.10"
dependencies = ["setuptools", "pytest", "pytest-json-report", "pytest-cov", "pydantic>=2.0.0", "python-dateutil>=2.8.2", "nltk>=3.8.1", "pytest>=7.0.0", "pytest-json-report>=1.5.0", "cryptography>=40.0.0", "regex>=2022.0.0", "pandas>=2.0.0", "sqlparse>=0.4.4"]

[tool.setuptools]
packages = ["common", "legal_discovery_interpreter", "privacy_query_interpreter"]
